# personal-quant-trading-agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: llm.yaml  market_scanner.yaml  news.yaml  workflow.yaml
docs/: architecture.md  customization.md  data-requirements.md  workflow.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  branding.ts  styles.css  types.ts
src/trading_agent/: __init__.py  api.py  bootstrap.py  cli.py  config.py  config_llm.py  config_news.py  config_workflow.py
src/trading_agent/agents/: __init__.py  base.py  catalyst.py  decision.py  kline_trend.py  llm_research.py  market_scanner.py  risk.py  volume.py
src/trading_agent/domain/: __init__.py  analysis.py  models.py
src/trading_agent/features/: __init__.py  candles.py
src/trading_agent/learning/: __init__.py  service.py
src/trading_agent/llm/: __init__.py  deepseek.py  kimi.py  openai_compatible.py
src/trading_agent/market_scanner/: __init__.py  pattern_gate.py  service.py
src/trading_agent/news/: __init__.py  base.py  cninfo.py  eastmoney.py  enricher.py  tushare.py
tests/: conftest.py  test_cli.py  test_config_and_registry.py  test_deepseek_llm.py  test_eastmoney_provider.py  test_kimi_llm.py  test_market_scanner.py  test_news.py  test_pattern_gate.py  test_scheduler.py  test_sina_provider.py  test_workflow.py
(+17 files in other folders)
