[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-quant-trading-agent"
version = "1.0.0"
description = "A configurable research assistant for A-share short-term trading decisions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.115,<1.0", "uvicorn[standard]>=0.30,<1.0"]
data = ["akshare>=1.15", "pandas>=2.2", "numpy>=1.26"]
agents = ["langgraph>=0.2,<1.0"]
dev = ["pytest>=7.4", "pytest-cov>=5.0", "ruff>=0.6"]

[project.scripts]
trading-agent = "trading_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
